--- a/frontend/src/Pages/Login/index.css
+++ b/frontend/src/Pages/Login/index.css
@@ -1,6 +1,6 @@
 .loginContainer {
   display: flex;
-  margin: 200px 15%;
+  margin: 0 15%;
   background: #fefaef;
   justify-content: center;
   font-size: 1.3rem;
@@ -23,11 +23,11 @@
   height: 40px;
   padding: 5px;
 }
-#loginForm input[type='password'] {
+#loginForm input[type="password"] {
   margin-bottom: 4px;
 }
 
-#loginForm input[type='submit'] {
+#loginForm input[type="submit"] {
   width: 100%;
   height: 50px;
   border-radius: 5px;
