Feat : signup form 만들기
회원가입폼 디자인 및 기능 만들기

--- a/frontend/src/Components/Topnav.css
+++ b/frontend/src/Components/Topnav.css
@@ -1,8 +1,7 @@
 .NavContainer {
   width: 70%;
   height: 48px;
-  background-color: green;
-  /* background-color: #fffdf8; */
+  background-color: #fffdf8;
   padding-bottom: 50px;
   margin: 0 15%;
 }
