--- a/frontend/src/Pages/Login/index.css
+++ b/frontend/src/Pages/Login/index.css
@@ -1,7 +1,7 @@
 .loginContainer {
   display: flex;
   margin: 0 15%;
-  background: #fefaef;
+  background: #fffdf8;
   justify-content: center;
   font-size: 1.3rem;
 }
