--- a/frontend/src/Pages/Signup/index.css
+++ b/frontend/src/Pages/Signup/index.css
@@ -1,4 +1,72 @@
-.signUp {
+.signup {
   width: 70%;
   margin: 0 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fffdf8;
+}
+.signupForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+}
+.signupInputDiv {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  font-weight: 700;
+  position: relative;
+  justify-content: space-evenly;
+}
+.signupDiv {
+  width: 40%;
+  margin: 15px 0 15px 30px;
+  text-align: left;
+  padding: 2px;
+}
+
+.signupInput {
+  margin-top: 13.5px;
+  min-width: 150px;
+  max-width: 220px;
+  height: 30px;
+  display: block;
+  border-radius: 5px;
+  text-align: left;
+  padding-left: 5px;
+  font-size: inherit;
+  border: 1px solid;
+}
+
+.signupInput::placeholder {
+  font-size: 1rem;
+}
+
+.message {
+  position: absolute;
+  left: 47%;
+  top: 83%;
+  font-size: 0.8rem;
+}
+.signupBtnBox {
+  margin-top: 40px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 60%;
+}
+.signupBtn {
+  width: 70%;
+  height: 55%;
+  margin-left: 40px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 1px solid;
+  cursor: pointer;
+  background-color: #b22222;
+  color: white;
 }
