Design: 나의 모임 디자인
나의 모임에서 피드와 일정 그리고 내가 속한 모임 UI 만듦, navbar css도 조금 수정

--- a/frontend/src/Components/Topnav.css
+++ b/frontend/src/Components/Topnav.css
@@ -4,6 +4,8 @@
   background-color: #fffdf8;
   margin: 0 15%;
   display: flex;
+  padding-bottom: 50px;
+  box-sizing: content-box;
 }
 .Logo {
   width: 71px;
