--- a/frontend/src/Pages/Myinfo/MyMeet/index.css
+++ b/frontend/src/Pages/Myinfo/MyMeet/index.css
@@ -8,7 +8,7 @@
   width: 100%;
   height: 180px;
 
-  border-bottom: 6px solid #610202;
+  border-bottom: 6px solid #e0e0e0;
   display: flex;
   flex-wrap: wrap;
   overflow-y: auto;
@@ -77,4 +77,43 @@
   display: flex;
   justify-content: space-between;
   width: 130px;
+}
+.tabs {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+li {
+  list-style: none;
+  width: 89px;
+  display: flex;
+  justify-content: center;
+}
+button {
+  border: 0;
+  background-color: transparent;
+  color: #b22222;
+  font-weight: 800;
+}
+.tabButtonBox {
+  width: 320px;
+  background-color: #e0e0e0;
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+}
+.tabButtonBox:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.tabButtonBox:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+li:first-child:hover {
+  border-bottom: 1.6px solid #b22222;
 }
