--- a/frontend/src/Components/Topnav.css
+++ b/frontend/src/Components/Topnav.css
@@ -1,7 +1,8 @@
 .NavContainer {
   width: 70%;
   height: 48px;
-  background-color: #fffdf8;
+  /* background-color: green; */
+  /* background-color: #fffdf8; */
   padding-bottom: 50px;
   margin: 0 15%;
 }
@@ -81,4 +82,11 @@ label {
   width: 69px;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px) {
+  .NavContainer {
+    width: 100%;
+    margin: 0;
+  }
 }
