--- a/frontend/src/Pages/Login/index.css
+++ b/frontend/src/Pages/Login/index.css
@@ -4,7 +4,15 @@
   background: #fffdf8;
   justify-content: center;
   font-size: 1.3rem;
+  height: 100vh;
+  padding-top: 15%;
 }
+
+.landingText {
+  margin-bottom: 50px;
+  font-size: 6rem;
+}
+
 .loginSmallContainer {
   display: flex;
   margin-top: 10%;
@@ -33,7 +41,7 @@
   border-radius: 5px;
   color: white;
   background-color: #b22222;
-  font-size: 1.2rem;
+  font-size: 2.3rem;
   cursor: pointer;
 }
 .loginSmallContainer {
@@ -41,8 +49,10 @@
   flex-direction: column;
   gap: 10px;
 }
+
 .loginSmallContainer {
   text-align: center;
+  font-size: 20px;
 }
 
 .inGoogle {
