--- a/frontend/src/Pages/Myinfo/index.css
+++ b/frontend/src/Pages/Myinfo/index.css
@@ -1,4 +1,30 @@
-.myInfo {
+.myinfo {
   width: 70%;
   margin: 0 15%;
+  padding-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fffdf8;
+}
+.myinfoForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+}
+.myinfoImgEdit {
+  display: flex;
+  width: 150px;
+  height: 150px;
+}
+.myinfoProfileImg {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.editIcon {
+  position: absolute;
+  left: 59%;
+  top: 34.5%;
 }
