--- a/frontend/src/Pages/Signup/index.css
+++ b/frontend/src/Pages/Signup/index.css
@@ -1,6 +1,7 @@
 .signup {
   width: 70%;
   margin: 0 15%;
+  padding-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +12,9 @@
   flex-direction: column;
   align-items: center;
   width: 70%;
+}
+.signupTitle {
+  margin: 0 0 10% 0;
 }
 .signupInputDiv {
   display: flex;
