Style : 모임개설 뼈대
사진 전까지 , 뼈대 구축

--- a/frontend/src/Pages/Main/index.css
+++ b/frontend/src/Pages/Main/index.css
@@ -1,6 +1,6 @@
 .mainContainer {
   width: 70%;
-  height: 100vh;
+  height: auto;
   margin: 0 15%;
   padding: 3% 3%;
   background-color: silver;
