--- a/frontend/src/Pages/Signup/index.css
+++ b/frontend/src/Pages/Signup/index.css
@@ -1,5 +1,6 @@
 .signup {
   width: 70%;
+  height: auto;
   margin: 0 15%;
   padding-top: 5%;
   display: flex;
@@ -21,7 +22,6 @@
   width: 100%;
   flex-direction: row;
   font-weight: 700;
-  position: relative;
   justify-content: space-evenly;
 }
 .signupDiv {
@@ -34,6 +34,18 @@
 .signupInput {
   margin-top: 13.5px;
   min-width: 150px;
+  max-width: 220px;
+  height: 30px;
+  display: block;
+  border-radius: 5px;
+  text-align: left;
+  padding-left: 5px;
+  font-size: inherit;
+  border: 1px solid;
+}
+#birth.signupInput {
+  margin-top: 13.5px;
+  min-width: 176px;
   max-width: 220px;
   height: 30px;
   display: block;
@@ -60,7 +72,7 @@
   align-items: center;
   justify-content: center;
   height: 50px;
-  width: 60%;
+  width: 250px;
 }
 .signupBtn {
   width: 70%;
@@ -73,4 +85,10 @@
   cursor: pointer;
   background-color: #b22222;
   color: white;
+}
+@media screen and (max-width: 1024px) {
+  .signup {
+    width: 100%;
+    margin: 0;
+  }
 }
