--- a/frontend/src/Pages/Myinfo/index.css
+++ b/frontend/src/Pages/Myinfo/index.css
@@ -1,5 +1,6 @@
 .myinfo {
   width: 70%;
+  height: auto;
   margin: 0 15%;
   padding-top: 5%;
   display: flex;
@@ -7,11 +8,15 @@
   align-items: center;
   background-color: #fffdf8;
 }
+.myinfoTitle {
+  padding-bottom: 10px;
+}
 .myinfoForm {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 70%;
+  text-align: center;
 }
 .myinfoImgEdit {
   display: flex;
@@ -26,7 +31,41 @@
 .editIcon {
   position: absolute;
   left: 59%;
-  top: 34.5%;
+  top: 80%;
+}
+.NickandFlag {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  justify-content: center;
+}
+.myinfoNickName {
+  margin-right: 5px;
+  justify-content: center;
+}
+.nationImg {
+  width: 50px;
+  height: 30px;
+}
+.nationFlag {
+  width: 100%;
+  height: 100%;
+}
+.myinfoUpdate {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 43%;
+  height: 10%;
+  margin-bottom: 10px;
+}
+.signupDate {
+  width: 100%;
+  font-size: 1.2rem;
+  padding-bottom: 5px;
+}
+.myinfoComment {
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
