--- a/frontend/src/Components/Topnav.css
+++ b/frontend/src/Components/Topnav.css
@@ -1,4 +1,4 @@
-.NavContainer {
+.topNavContainer {
   width: 70%;
   height: 48px;
   background-color: #fffdf8;
@@ -14,7 +14,7 @@
   color: #b22222;
   font-size: 26px;
 }
-.header-box {
+.headerBox {
   width: 100%;
   height: 100%;
   padding: 0 12px;
@@ -23,7 +23,7 @@
   justify-content: space-between;
   align-items: center;
 }
-.navbar-button-box {
+.navbarButtonBox {
   box-sizing: border-box;
   position: relative;
   right: 10px;
@@ -34,18 +34,18 @@
   cursor: -webkit-grab;
   align-items: center;
 }
-.search-button {
+.searchButton {
   all: unset;
   margin-right: 10px;
 }
 
-label {
+.searchInputLabel {
   position: relative;
 }
 
-.inScreen-search {
+.inScreenSearch {
   position: absolute;
-  bottom: 5px;
+  bottom: 1px;
   right: 8px;
   font-size: 13px;
   border: 0;
@@ -54,20 +54,20 @@ label {
   width: 20px;
   border-radius: 16px;
 }
-.search-screen {
+.searchScreen {
   position: relative;
   display: flex;
   align-items: center;
   width: 300px;
-  height: 2.4rem;
+  height: 3rem;
 }
 
 .searchInput {
-  height: 1.8rem;
+  height: 2.5rem;
   width: 280px;
   border-radius: 1rem;
   position: relative;
-  padding-left: 10px; /*입력필드 커서 이동 */
+  padding-left: 10px;
   border: 1px solid black;
 }
 
@@ -81,8 +81,8 @@ label {
   padding-left: 10px;
 }
 
-.icon-container {
-  width: 69px;
+.navMenuIcon {
+  width: 150px;
   height: 2.6rem;
   display: flex;
   justify-content: space-between;
@@ -90,8 +90,42 @@ label {
 }
 
 @media screen and (max-width: 1024px) {
-  .NavContainer {
+  .topNavContainer {
     width: 100%;
     margin: 0;
   }
+}
+
+.dropdownLabel {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+  position: relative;
+}
+.myMenuList {
+  display: none;
+  position: absolute;
+  width: 100%;
+}
+.menuList {
+  padding-left: 20px;
+  list-style: none;
+}
+.aboutMyMenuHidden {
+  background: rgb(248, 245, 245);
+  box-shadow: 0 4px 5px 0 #00000026;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  max-height: 170px;
+  position: absolute;
+  width: 25%;
+  top: 42px;
+  right: 10px;
+}
+.logoutButton {
+  border: 0;
+  background-color: transparent;
+  font-size: 16px;
 }
