--- a/frontend/src/Pages/Mymeet/index.css
+++ b/frontend/src/Pages/Mymeet/index.css
@@ -12,7 +12,6 @@
   display: flex;
   flex-wrap: wrap;
   overflow-y: auto;
-  padding: 12px 47px;
 }
 .myMeetBox {
   width: 104px;
@@ -20,8 +19,7 @@
 
 .showMyFeed {
   width: 100%;
-  height: 200vh;
-  overflow-y: auto;
+  height: auto;
 
   padding-left: 10px;
 }
@@ -29,13 +27,15 @@
   border-radius: 22px;
 }
 .feedTitleBox {
-  padding-top: 20px;
+  padding-top: 10px;
   width: 100%;
-  height: 66px;
+  height: 44px;
 }
 
 .feedInfo {
   margin-left: 5px;
+  display: flex;
+  flex-direction: column;
 }
 .feedBox {
   padding-bottom: 20px;
@@ -48,6 +48,7 @@
 .feedSource {
   display: flex;
   padding-bottom: 20px;
+  align-items: center;
 }
 
 .showMySchedule {
@@ -85,35 +86,10 @@
   justify-content: center;
   margin-bottom: 16px;
 }
-li {
-  list-style: none;
-  width: 89px;
-  display: flex;
-  justify-content: center;
+.articleInfo {
+  font-size: 13px;
 }
-button {
-  border: 0;
-  background-color: transparent;
-  color: #b22222;
-  font-weight: 800;
-}
-.tabButtonBox {
-  width: 320px;
-  background-color: #e0e0e0;
-  display: flex;
-  justify-content: center;
-  padding-left: 0;
-}
-.tabButtonBox:first-child {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.tabButtonBox:last-child {
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-li:first-child:hover {
-  border-bottom: 1.6px solid #b22222;
+.namingMeeting {
+  margin-bottom: 7px;
+  margin-top: 0;
 }
