Feat: 메인페이지 데이터바인딩
메인페이지가 최신이 뜨게 데이터바인딩

--- a/frontend/src/Pages/Main/moveimages.css
+++ b/frontend/src/Pages/Main/moveimages.css
@@ -46,11 +46,23 @@
   color: white;
 }
 
+.reviewTitle {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0; /* 기본적으로 숨김 */
+  transition: opacity 0.3s ease;
+  font-size: 2rem;
+  color: white;
+}
+
 .imageBox:hover img {
   filter: brightness(0.3); /* 이미지 어둡게 처리 */
 }
 
-.imageBox:hover .review {
+.imageBox:hover .review,
+.reviewTitle {
   opacity: 1; /* 호버 시 표시 */
 }
 
