--- a/frontend/src/Pages/Meethome/index.css
+++ b/frontend/src/Pages/Meethome/index.css
@@ -12,20 +12,24 @@
   margin-bottom: 30px;
 }
 .changePageIconBox {
+  width: 90%;
   height: 48px;
   display: flex;
   flex-direction: row-reverse;
 }
 .changePageIconBox > .meetHomeIcons {
-  width: 30%;
+  width: 14%;
   height: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 .personIconBtn,
 .meetOutBtn {
   width: 50px;
   height: 50px;
   border: none;
-  background-color: inherit;
+  border-radius: 30px;
+  background-color: #e0e0e0;
 }
 .nameOfMeeting {
   display: flex;
@@ -36,7 +40,7 @@
 .aboutUserNumber {
   display: flex;
   padding-left: 49px;
-  width: 27%;
+  width: 20%;
   justify-content: space-between;
 }
 .createPost {
@@ -66,7 +70,7 @@
   border-radius: 7.5px;
   position: fixed;
   bottom: 10px;
-  left: 400px;
+  left: 600px;
 }
 .enterBtn {
   color: white;
