--- a/frontend/src/Pages/Myinfo/index.css
+++ b/frontend/src/Pages/Myinfo/index.css
@@ -1,152 +1,458 @@
-.myinfo {
-  width: 70%;
-  height: auto;
-  margin: 0 15%;
-  padding-top: 5%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fffdf8;
-}
-.myinfoTitle {
-  padding-bottom: 10px;
-}
-.myinfoForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 70%;
-  text-align: center;
-}
-.myinfoImgEdit {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  width: 150px;
-  height: 150px;
-}
-.profileImgEdit {
-  display: flex;
-  width: 100%;
-  height: 100%;
+@media screen and (min-width: 1025px) {
+  .myinfo {
+    width: 70%;
+    height: auto;
+    margin: 0 15%;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .myinfoTitle {
+    padding-bottom: 10px;
+    font-size: 5rem;
+  }
+  .myinfoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    text-align: center;
+  }
+  .myinfoImgEdit {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 150px;
+    height: 150px;
+  }
+  .profileImgEdit {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .myinfoProfileImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .MdEditIcon {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .nickName {
+    display: flex;
+    width: 300px;
+    height: 60px;
+    flex-direction: column;
+    margin: 10px;
+    justify-content: center;
+  }
+  .myinfoNickName {
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin-right: 5px;
+  }
+
+  .myinfoSignupDate {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 1.3rem;
+  }
+  /* .myinfoComment {
+    width: 100%;
+    text-align: center;
+  }
+  .commentEdit {
+    display: block;
+    width: 260px;
+  } */
+  .myinfoNickEditInput {
+    display: flex;
+    width: 60%;
+    margin: auto;
+    padding-left: 5px;
+    border: 1px solid;
+    border-radius: 5px;
+  }
+
+  .myinfoEdit {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .myinfoDiv {
+    width: 35%;
+    margin: 15px -40px 15px 30px;
+    font-size: 1.8rem;
+    text-align: left;
+    padding: 2px;
+  }
+  .myinfoBeforeEdit {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    text-align: left;
+    padding: 7px 0px 0 5px;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 1.5rem;
+  }
+  .myinfoEditInput {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  #new_birth.myinfoEditInput {
+    margin-top: 13.5px;
+    height: 30px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: inherit;
+    border: 1px solid;
+  }
+  .myinfoBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 250px;
+  }
+  .myinfoBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
+  }
 }
 
-.myinfoProfileImg {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-}
-.MdEditIcon {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-.NickandFlag {
-  display: flex;
-  width: 300px;
-  height: 30px;
-  flex-direction: row;
-  margin: 10px;
-  justify-content: center;
-}
-.myinfoNickName {
-  font-size: 1.8rem;
-  margin-right: 5px;
-  justify-content: center;
-}
-.nationImg {
-  width: 50px;
-  height: 30px;
-}
-.nationFlag {
-  width: 100%;
-  height: 100%;
-}
-.myinfoUpdate {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 43%;
-  height: 10%;
-  margin-bottom: 10px;
-}
-.signupDate {
-  width: 100%;
-  font-size: 1.2rem;
-  padding-bottom: 5px;
-}
-.myinfoComment {
-  width: 100%;
-  text-align: center;
-}
-.commentEdit {
-  display: block;
-  width: 260px;
-}
-
-.myinfoEdit {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  font-weight: 700;
-  justify-content: space-evenly;
-}
-.myinfoDiv {
-  width: 40%;
-  margin: 15px -40px 15px 30px;
-  text-align: left;
-  padding: 2px;
-}
-.myinfoEditInput {
-  margin-top: 13.5px;
-  min-width: 150px;
-  max-width: 220px;
-  height: 30px;
-  display: block;
-  border-radius: 5px;
-  text-align: left;
-  padding-left: 5px;
-  font-size: inherit;
-  border: 1px solid;
-}
-
-#new_birth.myinfoEditInput {
-  margin-top: 13.5px;
-  min-width: 176px;
-  max-width: 220px;
-  height: 30px;
-  display: block;
-  border-radius: 5px;
-  text-align: left;
-  padding-left: 5px;
-  font-size: inherit;
-  border: 1px solid;
-}
-.myinfoBtnBox {
-  margin-top: 40px;
-  display: block;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  width: 250px;
-}
-.myinfoBtn {
-  width: 70%;
-  height: 55%;
-  margin-left: 40px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  border: 1px solid;
-  cursor: pointer;
-  background-color: #b22222;
-  color: white;
-}
-
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .myinfo {
     width: 100%;
+    height: auto;
     margin: 0;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .myinfoTitle {
+    padding-bottom: 10px;
+    font-size: 5rem;
+  }
+  .myinfoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    text-align: center;
+  }
+  .myinfoImgEdit {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 150px;
+    height: 150px;
+  }
+  .profileImgEdit {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .myinfoProfileImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .MdEditIcon {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .nickName {
+    display: flex;
+    width: 300px;
+    height: 60px;
+    flex-direction: column;
+    margin: 10px;
+    justify-content: center;
+  }
+  .myinfoNickName {
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin-right: 5px;
+  }
+
+  .myinfoSignupDate {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 1.3rem;
+  }
+  /* .myinfoComment {
+    width: 100%;
+    text-align: center;
+  }
+  .commentEdit {
+    display: block;
+    width: 260px;
+  } */
+  .myinfoNickEditInput {
+    display: flex;
+    width: 60%;
+    margin: auto;
+    padding-left: 5px;
+    border: 1px solid;
+    border-radius: 5px;
+  }
+
+  .myinfoEdit {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .myinfoDiv {
+    width: 35%;
+    margin: 15px -40px 15px 30px;
+    font-size: 1.8rem;
+    text-align: left;
+    padding: 2px;
+  }
+  .myinfoBeforeEdit {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    text-align: left;
+    padding: 7px 0px 0 5px;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 1.5rem;
+  }
+  .myinfoEditInput {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  #new_birth.myinfoEditInput {
+    margin-top: 13.5px;
+    height: 30px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: inherit;
+    border: 1px solid;
+  }
+  .myinfoBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 250px;
+  }
+  .myinfoBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .myinfo {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .myinfoTitle {
+    padding-bottom: 10px;
+    font-size: 4rem;
+  }
+  .myinfoForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    text-align: center;
+  }
+  .myinfoImgEdit {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 150px;
+    height: 150px;
+  }
+  .profileImgEdit {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .myinfoProfileImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .MdEditIcon {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .nickName {
+    display: flex;
+    width: 300px;
+    height: 60px;
+    flex-direction: column;
+    margin: 10px;
+    justify-content: center;
+  }
+  .myinfoNickName {
+    font-size: 1.9rem;
+    font-weight: 500;
+    margin-right: 5px;
+  }
+
+  .myinfoSignupDate {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 1.3rem;
+  }
+  /* .myinfoComment {
+    width: 100%;
+    text-align: center;
+  }
+  .commentEdit {
+    display: block;
+    width: 260px;
+  } */
+  .myinfoNickEditInput {
+    display: flex;
+    width: 60%;
+    margin: auto;
+    padding-left: 5px;
+    border: 1px solid;
+    border-radius: 5px;
+  }
+
+  .myinfoEdit {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .myinfoDiv {
+    width: 35%;
+    margin: 15px -40px 15px 30px;
+    font-size: 1.4rem;
+    text-align: left;
+    padding: 2px;
+  }
+  .myinfoBeforeEdit {
+    margin-top: 13.5px;
+    width: 200px;
+    height: 40px;
+    display: block;
+    text-align: left;
+    padding: 7px 0px 0 5px;
+    border: 1px solid;
+    border-radius: 5px;
+    font-size: 1.5rem;
+  }
+  .myinfoEditInput {
+    margin-top: 13.5px;
+    width: 200px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  #new_birth.myinfoEditInput {
+    margin-top: 13.5px;
+    height: 30px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: inherit;
+    border: 1px solid;
+  }
+  .myinfoBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 220px;
+  }
+  .myinfoBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
   }
 }
