--- a/frontend/src/Pages/Signup/index.css
+++ b/frontend/src/Pages/Signup/index.css
@@ -1,100 +1,290 @@
-.signup {
-  width: 70%;
-  height: auto;
-  margin: 0 15%;
-  padding-top: 5%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fffdf8;
-}
-.signupForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 70%;
-}
-.signupTitle {
-  margin: 0 0 10% 0;
-}
-.signupInputDiv {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  font-weight: 700;
-  justify-content: space-evenly;
-}
-.signupDiv {
-  width: 40%;
-  margin: 15px 0 15px 30px;
-  text-align: left;
-  padding: 2px;
+@media screen and (min-width: 1025px) {
+  .signup {
+    width: 70%;
+    height: auto;
+    margin: 0 15%;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .signupForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+  .signupTitle {
+    margin: 0 0 10% 0;
+    font-size: 5rem;
+  }
+  .signupInputDiv {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .signupDiv {
+    width: 35%;
+    margin: 15px 0 15px 30px;
+    font-size: 1.8rem;
+    text-align: left;
+    padding: 2px;
+  }
+
+  .signupInput {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    border: 1px solid;
+  }
+
+  #date_of_birth.signupInput {
+    margin-top: 13.5px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  .signupInput::placeholder {
+    font-size: 1rem;
+  }
+
+  .message {
+    position: absolute;
+    left: 47%;
+    top: 83%;
+    font-size: 0.8rem;
+  }
+  .signupBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 250px;
+  }
+  .signupBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
+  }
+
+  .eyesIcon {
+    position: absolute;
+    top: -5px;
+  }
 }
 
-.signupInput {
-  margin-top: 13.5px;
-  min-width: 150px;
-  max-width: 220px;
-  height: 30px;
-  display: block;
-  border-radius: 5px;
-  text-align: left;
-  padding-left: 5px;
-  font-size: inherit;
-  border: 1px solid;
-}
-
-#date_of_birth.signupInput {
-  margin-top: 13.5px;
-  min-width: 176px;
-  max-width: 220px;
-  height: 30px;
-  display: block;
-  border-radius: 5px;
-  text-align: left;
-  padding-left: 5px;
-  font-size: inherit;
-  border: 1px solid;
-}
-
-.signupInput::placeholder {
-  font-size: 1rem;
-}
-
-.message {
-  position: absolute;
-  left: 47%;
-  top: 83%;
-  font-size: 0.8rem;
-}
-.signupBtnBox {
-  margin-top: 40px;
-  display: block;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  width: 250px;
-}
-.signupBtn {
-  width: 70%;
-  height: 55%;
-  margin-left: 40px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  border: 1px solid;
-  cursor: pointer;
-  background-color: #b22222;
-  color: white;
-}
-
-.eyesIcon {
-  position: absolute;
-  top: -5px;
-}
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .signup {
     width: 100%;
+    height: auto;
     margin: 0;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .signupForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+  .signupTitle {
+    margin: 0 0 10% 0;
+    font-size: 5rem;
+  }
+  .signupInputDiv {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .signupDiv {
+    width: 35%;
+    margin: 15px 0 15px 30px;
+    font-size: 1.8rem;
+    text-align: left;
+    padding: 2px;
+  }
+
+  .signupInput {
+    margin-top: 13.5px;
+    width: 220px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    border: 1px solid;
+  }
+
+  #date_of_birth.signupInput {
+    margin-top: 13.5px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  .signupInput::placeholder {
+    font-size: 1rem;
+  }
+
+  .message {
+    position: absolute;
+    left: 47%;
+    top: 83%;
+    font-size: 0.8rem;
+  }
+  .signupBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 250px;
+  }
+  .signupBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
+  }
+
+  .eyesIcon {
+    position: absolute;
+    top: -5px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .signup {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffdf8;
+  }
+  .signupForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+  .signupTitle {
+    margin: 0 0 10% 0;
+    font-size: 4rem;
+  }
+  .signupInputDiv {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    flex-direction: row;
+    font-weight: 700;
+    justify-content: space-evenly;
+  }
+  .signupDiv {
+    width: 35%;
+    margin: 15px 0 15px 30px;
+    font-size: 1.3rem;
+    text-align: left;
+    padding: 2px;
+  }
+
+  .signupInput {
+    margin-top: 13.5px;
+    width: 200px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    border: 1px solid;
+  }
+
+  #date_of_birth.signupInput {
+    margin-top: 13.5px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    text-align: left;
+    padding-left: 5px;
+    font-size: 1.3rem;
+    border: 1px solid;
+  }
+
+  .signupInput::placeholder {
+    font-size: 1rem;
+  }
+
+  .message {
+    position: absolute;
+    left: 47%;
+    top: 83%;
+    font-size: 0.8rem;
+  }
+  .signupBtnBox {
+    margin-top: 40px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 230px;
+  }
+  .signupBtn {
+    width: 80%;
+    height: 55%;
+    margin-left: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 1px solid;
+    cursor: pointer;
+    background-color: #b22222;
+    color: white;
+    font-size: 1.8rem;
+  }
+
+  .eyesIcon {
+    position: absolute;
+    top: -5px;
   }
 }
