--- a/frontend/src/Pages/Meethome/MemberList.css
+++ b/frontend/src/Pages/Meethome/MemberList.css
@@ -1,8 +1,165 @@
 @media screen and (min-width: 1025px) {
+  .memberListForm {
+    width: 70%;
+    height: 100vh;
+    margin: 0 15%;
+    background-color: #fffdf8;
+  }
+  .memberIcon {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-left: 15px;
+  }
+  .memberList {
+    padding-left: 25px;
+  }
+  .membersDiv {
+    width: 80%;
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    padding-bottom: 10px;
+  }
+  .memberListImgDiv {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+  }
+  .memberListImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+  }
+  .memberDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .memberNickname {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+  .memberDate {
+    margin-bottom: 5px;
+    font-size: 1rem;
+  }
+  .memberNation {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .memberListForm {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: #fffdf8;
+  }
+  .memberIcon {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-left: 15px;
+  }
+  .memberList {
+    padding-left: 25px;
+  }
+  .membersDiv {
+    width: 80%;
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    padding-bottom: 10px;
+  }
+  .memberListImgDiv {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+  }
+  .memberListImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+  }
+  .memberDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .memberNickname {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+  .memberDate {
+    margin-bottom: 5px;
+    font-size: 1rem;
+  }
+  .memberNation {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
+  .memberListForm {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: #fffdf8;
+  }
+
+  .memberIcon {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-left: 15px;
+  }
+  .memberList {
+    padding-left: 25px;
+  }
+  .membersDiv {
+    width: 80%;
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    padding-bottom: 10px;
+  }
+  .memberListImgDiv {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+  }
+  .memberListImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+  }
+  .memberDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .memberNickname {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+  .memberDate {
+    margin-bottom: 5px;
+    font-size: 1rem;
+  }
+  .memberNation {
+    font-size: 1rem;
+  }
 }
