--- a/frontend/src/Pages/Meethome/index.css
+++ b/frontend/src/Pages/Meethome/index.css
@@ -74,3 +74,10 @@
   font-size: 22px;
   font-weight: 560;
 }
+
+@media screen and (max-width: 1024px) {
+  .meetScreenContainer {
+    width: 100%;
+    margin: 0;
+  }
+}
