--- a/frontend/src/Pages/Meethome/NoticeBoard.css
+++ b/frontend/src/Pages/Meethome/NoticeBoard.css
@@ -1,10 +1,15 @@
+.coverNoticeBox {
+  height: auto;
+}
+
 .noticeBoardBox {
   padding-top: 8px;
   margin-left: 15px;
   width: 95%;
+  height: auto;
   border-bottom: 0.6px solid rgb(166, 166, 166);
-  height: 160px;
 }
+
 .writerPicture {
   border-radius: 26px;
 }
@@ -34,11 +39,19 @@
   list-style-type: none;
 }
 .joinerFeedBox {
-  height: 98px;
+  height: auto;
   padding-top: 20px;
   font-size: 16px;
 }
 .deleteIcon {
   border: 0;
   background-color: transparent;
+}
+.feedBoxContent {
+  height: 70px;
+}
+.noFeed {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
 }
