--- a/frontend/src/Pages/Meethome/Schedule.css
+++ b/frontend/src/Pages/Meethome/Schedule.css
@@ -91,3 +91,20 @@
   background-color: transparent;
   font-size: 16px;
 }
+.noSchedule {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+}
+.noneScheduleCreate {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  border: 1px;
+}
+.scheduleBtn {
+  border: 1px solid rgb(160, 160, 160) !important;
+  height: 50px;
+  border-radius: 24px;
+  width: 160px;
+}
