Bug: myinfo 사진수정,이메일가져오기,memberList count
내정보수정 사진 수정하기 버그수정,이메일표시,모임 멤버리스트인원표시

--- a/frontend/src/Components/Deletemember.css
+++ b/frontend/src/Components/Deletemember.css
@@ -36,3 +36,22 @@
   .deleteMemberBtn {
   }
 }
+
+@media screen and (max-width: 767px) {
+  .deleteMemberContainer {
+    width: 100%;
+    margin: 0;
+    background-color: #fffdf8;
+    font-size: 1rem;
+  }
+  .deleteMemberBox {
+    width: 100%;
+    padding-left: 37px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.3rem;
+  }
+  .deleteMemberBtn {
+  }
+}
