--- a/frontend/src/Pages/Meethome/MemberList.css
+++ b/frontend/src/Pages/Meethome/MemberList.css
@@ -23,6 +23,10 @@
     margin-top: 3px;
     padding-left: 5px;
   }
+  .memberListCount {
+    margin-top: 3px;
+    padding-left: 10px;
+  }
   .membersDiv {
     width: 80%;
     display: flex;
@@ -84,6 +88,10 @@
     margin-top: 3px;
     padding-left: 5px;
   }
+  .memberListCount {
+    margin-top: 3px;
+    padding-left: 10px;
+  }
   .membersDiv {
     width: 80%;
     display: flex;
@@ -144,6 +152,10 @@
   .memberText {
     margin-top: 4px;
     padding-left: 5px;
+  }
+  .memberListCount {
+    margin-top: 4px;
+    padding-left: 10px;
   }
   .membersDiv {
     width: 80%;
