Style: 피드 링크연결, 아이콘 미디어 쿼리
피드 링크 연결을 통해 피드상세페이지로 가도록하고, css 미디어쿼리를 사용해 화면크기에 반응하도록 만듦

--- a/frontend/src/Components/Topnav.css
+++ b/frontend/src/Components/Topnav.css
@@ -6,6 +6,7 @@
   display: flex;
   padding-bottom: 22px;
   box-sizing: content-box;
+  z-index: 999;
 }
 .Logo {
   width: 120px;
@@ -126,6 +127,7 @@
   width: 25%;
   top: 42px;
   right: 10px;
+  z-index: 900;
 }
 .logoutButton {
   border: 0;
