--- a/frontend/src/Pages/Meethome/NoticeBoard.css
+++ b/frontend/src/Pages/Meethome/NoticeBoard.css
@@ -54,4 +54,8 @@
   display: flex;
   justify-content: center;
   font-size: 16px;
+  padding-bottom: 400px;
+}
+.noticeBoard {
+  padding-bottom: 400px;
 }
