--- a/frontend/src/Pages/Meethome/Schedule.css
+++ b/frontend/src/Pages/Meethome/Schedule.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  height: auto;
 }
 .makingScheduleBox {
   height: 66px;
@@ -14,7 +15,8 @@
   border-radius: 18px;
 }
 .wrapScheduleBox {
-  height: 160vh;
+  height: auto;
+  margin-bottom: 200px;
 }
 .divisionScheduleBox {
   display: flex;
@@ -95,6 +97,7 @@
   display: flex;
   justify-content: center;
   font-size: 16px;
+  padding-bottom: 500px;
 }
 .noneScheduleCreate {
   margin-top: 50px;
