Fix: myinfo 사진 patch오류 수정
내 정보수정 페이지 사진 수정하기 오류 부분 코드 변

--- a/frontend/src/Pages/Mymeet/index.css
+++ b/frontend/src/Pages/Mymeet/index.css
@@ -97,3 +97,12 @@
   margin-bottom: 7px;
   margin-top: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .meet {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    background-color: #fffdf8;
+  }
+}
