--- a/frontend/src/Pages/Meethome/Schedule.css
+++ b/frontend/src/Pages/Meethome/Schedule.css
@@ -75,7 +75,6 @@
   margin-left: 5px;
   height: 35px;
   font-size: 20px;
-
   display: flex;
   align-items: center;
 }
@@ -97,6 +96,7 @@
   display: flex;
   justify-content: center;
   font-size: 16px;
+  padding-bottom: 350px;
 }
 .noneScheduleCreate {
   margin-top: 26px;
